--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<h1>Learning Git, GitHub & the Command Line</h1>
+		<p>Gotta love becoming a collaborative coder <3 by learning a ton of new stuff!</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
